# RC_Project

./: .gitignore  README.md
atomic_configure/: setup.sh
catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
catkin_generated/installspace/: _setup_util.py  local_setup.sh  setup.sh
devel/: .catkin  local_setup.sh
gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
p3dx_description/: CTestTestfile.cmake  Makefile  cmake_install.cmake
p3dx_description/catkin_generated/: pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
patrol/launch/: bringup.launch  move_base.launch  museum_small.launch
patrol/models/: artwork_database.csv
patrol/src/: explorer_node.cpp
random_walk/launch/: coppelia_1pioneer.launch  coppelia_2pioneer.launch  stage_1pioneer_ISR.launch  stage_1pioneer_building.launch  stage_2pioneer_building.launch  stage_8pioneer_ISR.launch  stage_teleop_1pioneer_building.launch
random_walk/rviz_configs/: coppelia_multi_p3dx.rviz  coppelia_p3dx.rviz  gazebo_1turtlebot_building.rviz  gazebo_2turtlebot_building.rviz  gazebo_8turtlebot_building.rviz  p3dx.rviz  stage_multi_p3dx_building.rviz  stage_p3dx_building.rviz
random_walk/src/: random_walk.cpp
rc_gmapping/launch/: gazebo_gmapping_exploration_building.launch  gmapping.launch  gmapping_from_rosbag.launch
rc_gmapping/rviz/: octomap_gmapping_online.rviz  slam_and_exploration_p3dx_coppelia.rviz
rc_simul_worlds/: CMakeLists.txt  CTestTestfile.cmake  Makefile
rc_simul_worlds/launch/: 8turtlebot3_gazebo_building.launch
src/explore_slam/: CMakeLists.txt  package.xml
src/explore_slam/launch/: explore.launch
src/explore_slam/src/: costmap_client.cpp  explore.cpp  frontier_search.cpp
src/patrol/: CMakeLists.txt
src/patrol/launch/: amcl.launch  bringup.launch  calculate_path_cost.launch  comissioning.launch  exploration.launch  move_base.launch  move_base_exploration.launch  move_base_navigation.launch  move_base_patrol.launch  museum_exploration.launch  museum_gazebo.launch  museum_navigation.launch  museum_small.launch  museum_small_navigation.launch  navigation.launch  pc2_to_ls.launch  rtab_map.launch
src/patrol/launch/Real_World/: comissioning_real.launch  exploration_real.launch  navigation_real.launch
src/patrol/model/Building/: model.sdf
src/patrol/param/: costmap_common_params.yaml  costmap_common_params_real.yaml  costmap_common_params_sim.yaml  dwa_local_planner_params_real.yaml  dwa_local_planner_params_sim.yaml  local_costmap_params.yaml  move_base_params.yaml
src/patrol/rviz/: patrol_rviz.rviz
src/patrol/src/: guide_node.cpp  p3_sol.py  path_cost_calc.cpp
src/patrol/world/: CurrentWorld.graph  CurrentWorld.pgm  CurrentWorld.yaml  cube_world.world  finalExploreOdom.yaml  museum.world  teste.graph
src/patrol/world/CurrentWorld/: CurrentWorld.graph  CurrentWorld.pgm  CurrentWorld.yaml  finalExploreOdom.yaml
src/patrol/world/museum_base/: finalExploreOdom.yaml  museum_base.graph  museum_base.pgm  museum_base.world  museum_base.yaml
src/patrol/world/museum_final/: model.config  model.sdf
(+155 files in other folders)
